// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserBadge auto center alignment 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoUserBadge-root"
    >
      <div
        class="relative bg-gray text-[1rem] shrink-0 grow-0 w-[2.5em] h-[2.5em] [clip-path:polygon(0_0,_100%_0,_100%_100%,_0.5em_100%,_0_calc(100%-0.5em))]"
      >
        <div
          class="uppercase absolute top-1/2 left-1/2 [transform:translate(-50%,-50%)] text-[1em] PicassoUserBadge-avatar"
        >
          <p
            class="m-0 text-white font-regular text-[1em] leading-[1.5em]"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoUserBadge-infoContainer"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <h4
            class="m-0 text-md text-black font-semibold inline PicassoUserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge custom name 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flexStartAlignItems PicassoContainer-flex PicassoUserBadge-root"
    >
      <div
        class="relative bg-gray text-[1rem] shrink-0 grow-0 w-[2.5em] h-[2.5em] [clip-path:polygon(0_0,_100%_0,_100%_100%,_0.5em_100%,_0_calc(100%-0.5em))]"
      >
        <div
          class="uppercase absolute top-1/2 left-1/2 [transform:translate(-50%,-50%)] text-[1em] PicassoUserBadge-avatar"
        >
          <p
            class="m-0 text-white font-regular text-[1em] leading-[1.5em]"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoUserBadge-infoContainer"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <div>
            Joe Doe
          </div>
        </div>
        <p
          class="m-0 font-inherit leading-[1.5em] text-graphite font-regular"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge custom title 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flexStartAlignItems PicassoContainer-flex PicassoUserBadge-root"
    >
      <div
        class="relative bg-gray text-[1rem] shrink-0 grow-0 w-[2.5em] h-[2.5em] [clip-path:polygon(0_0,_100%_0,_100%_100%,_0.5em_100%,_0_calc(100%-0.5em))]"
      >
        <div
          class="uppercase absolute top-1/2 left-1/2 [transform:translate(-50%,-50%)] text-[1em] PicassoUserBadge-avatar"
        >
          <p
            class="m-0 text-white font-regular text-[1em] leading-[1.5em]"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoUserBadge-infoContainer"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <h4
            class="m-0 text-md text-black font-semibold inline PicassoUserBadge-name"
          >
            Joe Doe
          </h4>
          <div>
            Custom Title
          </div>
        </div>
        <p
          class="m-0 font-inherit leading-[1.5em] text-graphite font-regular"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge invert render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flexStartAlignItems PicassoContainer-flex PicassoUserBadge-root"
    >
      <div
        class="relative bg-gray text-[1rem] shrink-0 grow-0 w-[2.5em] h-[2.5em] [clip-path:polygon(0_0,_100%_0,_100%_100%,_0.5em_100%,_0_calc(100%-0.5em))]"
      >
        <div
          class="uppercase absolute top-1/2 left-1/2 [transform:translate(-50%,-50%)] text-[1em] PicassoUserBadge-avatar"
        >
          <p
            class="m-0 text-white font-regular text-[1em] leading-[1.5em]"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoUserBadge-infoContainer"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <h4
            class="m-0 text-md text-white font-semibold inline PicassoUserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
        <p
          class="m-0 font-inherit leading-[1.5em] text-graphite font-regular"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge manual center alignment 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoUserBadge-root"
    >
      <div
        class="relative bg-gray text-[1rem] shrink-0 grow-0 w-[2.5em] h-[2.5em] [clip-path:polygon(0_0,_100%_0,_100%_100%,_0.5em_100%,_0_calc(100%-0.5em))]"
      >
        <div
          class="uppercase absolute top-1/2 left-1/2 [transform:translate(-50%,-50%)] text-[1em] PicassoUserBadge-avatar"
        >
          <p
            class="m-0 text-white font-regular text-[1em] leading-[1.5em]"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoUserBadge-infoContainer"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <h4
            class="m-0 text-md text-black font-semibold inline PicassoUserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
        <p
          class="m-0 font-inherit leading-[1.5em] text-graphite font-regular"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge override auto center alignment 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flexStartAlignItems PicassoContainer-flex PicassoUserBadge-root"
    >
      <div
        class="relative bg-gray text-[1rem] shrink-0 grow-0 w-[2.5em] h-[2.5em] [clip-path:polygon(0_0,_100%_0,_100%_100%,_0.5em_100%,_0_calc(100%-0.5em))]"
      >
        <div
          class="uppercase absolute top-1/2 left-1/2 [transform:translate(-50%,-50%)] text-[1em] PicassoUserBadge-avatar"
        >
          <p
            class="m-0 text-white font-regular text-[1em] leading-[1.5em]"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoUserBadge-infoContainer"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <h4
            class="m-0 text-md text-black font-semibold inline PicassoUserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flexStartAlignItems PicassoContainer-flex PicassoUserBadge-root"
    >
      <div
        class="relative bg-gray text-[1rem] shrink-0 grow-0 w-[2.5em] h-[2.5em] [clip-path:polygon(0_0,_100%_0,_100%_100%,_0.5em_100%,_0_calc(100%-0.5em))]"
      >
        <div
          class="uppercase absolute top-1/2 left-1/2 [transform:translate(-50%,-50%)] text-[1em] PicassoUserBadge-avatar"
        >
          <p
            class="m-0 text-white font-regular text-[1em] leading-[1.5em]"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoUserBadge-infoContainer"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <h4
            class="m-0 text-md text-black font-semibold inline PicassoUserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
        <p
          class="m-0 font-inherit leading-[1.5em] text-graphite font-regular"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge small size 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flexStartAlignItems PicassoContainer-flex PicassoUserBadge-root"
    >
      <div
        class="relative bg-gray text-[1rem] shrink-0 grow-0 w-[5em] h-[5em] [clip-path:polygon(0_0,_100%_0,_100%_100%,_1em_100%,_0_calc(100%-1em))]"
      >
        <div
          class="uppercase absolute top-1/2 left-1/2 [transform:translate(-50%,-50%)] text-[2em] PicassoUserBadge-avatar"
        >
          <p
            class="m-0 text-white font-regular text-[1em] leading-[1.5em]"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoUserBadge-infoContainer"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <h4
            class="m-0 text-md text-black font-semibold inline PicassoUserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
        <p
          class="m-0 font-inherit leading-[1.5em] text-graphite font-regular"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;
